Only check for a code length antecedent under RUNCODE32. RUNCODE33 and RUNCODE34 specify a repeat of zero so a previous code length isn't necessary.

Thanks to Justin Greer for catching this. Ghostscript bug 689835.


git-svn-id: http://svn.ghostscript.com/jbig2dec/trunk@466 ded80894-8fb9-0310-811b-c03f3676ab4d